Renombra métodos PUBLISH-CONSUME
